- Added ability for user to change password (giving use to account details change password area) - Added validation for current password and new password with confirmation - Fixed an error where error dialogs would not show the correct error - Fixed an error where error dialogs would be behind the settings wrapper

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,6 +40,10 @@ $bad-colour: #ea2e49;
     --bad-colour: #ea2e49;
 }
 
+body > div:not(.app-container) {
+  z-index: 99999;
+}
+
 .dg-container {
   animation: none !important;
 }
@@ -1594,7 +1598,7 @@ img.chat-markup {
 }
 
 .settings-wrapper {
-  z-index: 9999;
+  z-index: 999;
   height: 100%;
   width: 100%;
   position: fixed;
